# flutterC

./: pubspec.yaml  test11.dart
clib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libclib.so.1  randomNumber.h  random_number.c  random_number.def  randomnumber  test.cpp
